// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatMetadata should render Metadata component passing the formatted metadata 1`] = `
<Metadata
  compact={true}
  groupGeolocations={false}
  highlight={Array []}
  metadata={
    Array [
      Object {
        "formated": "metadata",
      },
    ]
  }
  templateColor="#c03b22"
  useV2Player={false}
/>
`;

exports[`FormatMetadata should unshift additional metadata if passed 1`] = `
<Metadata
  compact={false}
  groupGeolocations={false}
  highlight={Array []}
  metadata={
    Array [
      Object {
        "more": "data",
      },
      Object {
        "and": "more",
      },
      Object {
        "indexInTemplate": 0,
        "label": undefined,
        "name": "preview",
        "noLabel": false,
        "style": "contain",
        "translateContext": "template",
        "type": "image",
        "value": "/api/files/docId.jpg",
      },
    ]
  }
  templateColor="#c03b22"
  templateId="template"
  useV2Player={false}
/>
`;
